Bug 61418 - FORMATTING: Conditional formatting does not give an error in protected sheets
Summary: FORMATTING: Conditional formatting does not give an error in protected sheets
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium minor
Assignee: Gülşah Köse
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks: Conditional-Formatting
  Show dependency treegraph
 
Reported: 2013-02-25 01:37 UTC by B.J. Herbison
Modified: 2018-01-08 09:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description B.J. Herbison 2013-02-25 01:37:01 UTC
Problem description: 

Protection of a sheet prevents conditional formatting changes, but some operations do nothing instead of displaying an error message.

Steps to reproduce:

1.  Create a new document.
2.  Click above "1", left of "A" to select all cells.
3.  Open Format/Cells.../Cell Protection
4.  Uncheck "Protected".
5.  Click "OK".
6.  Open Tools/Protect Document/Sheet...
7.  Click "OK".
8.  Try to open Format/Conditional Formatting/Condition..., /Color Scale..., or /Data Bar...
9.  Open Format/Conditional Formatting/Manage...
 
Current behavior:

8.  Nothing happens: no conditional formatting box, no message.

9.  A message box with the message: Conditional Formats can not be created, deleted or changed in protected sheets!

Expected behavior:

8.  A message box appears explaining that conditional formatting is not allowed in protected sheets, even for protected cells.

9.  Replace the "!" at the end with "even for unprotected cells.". No need for an exclamation mark, and the extra words would help clarify that the situation is not an error.

Note: This is based on the response to bug 60837. Any menu items ending with "..." should elicit a response from the program.
Comment 1 Joel Madero 2013-02-25 04:47:29 UTC
Indeed:

Version 4.1.0.0.alpha0+ (Build ID: b8e0455f201198b1deb8f8ca0181e6c9cadc335)
Date:   Sat Feb 23 16:04:37 2013 -0600
Bodhi Linux 2.2

+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
New (confirmed)
Minor (doesn't prevent high quality work but is a bit confusing, if a user has taken steps to protect a sheet they probably know why they can't change formatting)
Medium (relatively easy to fix, inconsistent)

CC'ing Markus since he handles the Conditional Formatting stuff.
Comment 2 A (Andy) 2015-02-13 11:57:41 UTC
Reproducible with LO 4.4.0.3, Win 8.1
Comment 3 QA Administrators 2016-02-21 08:36:11 UTC Comment hidden (obsolete)
Comment 4 B.J. Herbison 2016-02-22 10:20:29 UTC
The problem still exists. Tested with version 5.1.0.3 on Windows 7.

The bug behavior isn't changed. I tested Formatting/Condition... and Formatting/Manage...

The setup instructions are slightly different. Step 6 should be:
6.  Open Tools/Protect Sheet...
Comment 5 B.J. Herbison 2016-02-22 10:26:12 UTC
(In reply to Joel Madero from comment #1)
> Indeed:
> 
> Version 4.1.0.0.alpha0+ (Build ID: b8e0455f201198b1deb8f8ca0181e6c9cadc335)
> Date:   Sat Feb 23 16:04:37 2013 -0600
> Bodhi Linux 2.2
> 
> +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
> New (confirmed)
> Minor (doesn't prevent high quality work but is a bit confusing, if a user
> has taken steps to protect a sheet they probably know why they can't change
> formatting)
> Medium (relatively easy to fix, inconsistent)
> 
> CC'ing Markus since he handles the Conditional Formatting stuff.

I disagree with the reasoning for the "Minor" designation.

Here's how I discovered this: I had a cell which was accidentally being damaged. So I set up protection on the sheet and disabled protection on everything but that one cell.

I had no reason to expect I couldn't change formatting on cells other than the one protected cell. The lack of any feedback when I tried to change formatting was very frustrating.

(Not I'm just disagreeing with the reasoning. I haven't studied your categorization of bugs and the level may still be appropriate.)
Comment 6 Joel Madero 2016-02-22 15:48:18 UTC
Hi There!
> > 
> > CC'ing Markus since he handles the Conditional Formatting stuff.
> 
> I disagree with the reasoning for the "Minor" designation.
> 

First, thanks for taking the time to respond.

Second, just a heads up that the severity/priority almost has *no* impact on if the bug is actually fixed or when it is fixed. It's a volunteer project, lots of developers have "niche" areas that they focus on and couldn't care less whether it's a critical bug or a trivial bug, they just want that area working. The severity/priority is just objective standard (I explained what a minor bug is, slows down but doesn't prevent high quality work). 

Thanks again!
Comment 7 Gülşah Köse 2018-01-04 13:38:53 UTC
Solved by https://gerrit.libreoffice.org/#/c/47395/
Comment 8 Commit Notification 2018-01-08 08:37:01 UTC
Gulsah Kose committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2d771c81d1292ea20f954364a0b8f34875973a17

tdf#61418 Show message on protected sheets for conditional formatting.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.