tdf#61418 Show message on protected sheets for conditional formatting.

.uno:ConditionalFormatDialog, .uno:ColorScaleFormatDialog,
.uno:DataBarFormatDialog, .uno:IconSetFormatDialog and
.uno:CondDateFormatDialog show an error message on protected sheets
for conditional formatting. The patch was sent for the ULAKBIM/Pardus
project.

Change-Id: Id3c1d6f76d1245b0395082b24fa5175c14f55555
Signed-off-by: Gulsah Kose <gulsah.1004@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/47395
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>